<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:keepScreenOn="true">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onPlay"
        android:text="PLAY"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:layout_weight="0.33"
                android:singleLine="true"
                android:text="@string/play_playingNameInit"
                android:textSize="@dimen/sp_m"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_m" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/playingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/size_l"
                android:layout_marginTop="@dimen/size_m"
                android:layout_weight="1"
                android:gravity="center"
                android:text="00:00"
                android:textSize="@dimen/sp_l" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:background="@null"
                android:id="@+id/SelectVolumn"
                android:layout_marginTop="@dimen/size_m"
                android:src="@mipmap/ic_unmute"
                android:visibility="invisible"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/onQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_btn_accent_theme"
        android:paddingLeft="@dimen/size_xl"
        android:paddingRight="@dimen/size_xl"
        android:text="@string/play_qr"
        android:textSize="@dimen/sp_m"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/aroundLayout">

        <LinearLayout
            android:id="@+id/ctLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/aroundLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_m"
            android:layout_margin="@dimen/size_t"
            android:text="@string/play_around"/>

        <TextView
            android:id="@+id/beaconCountAround"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textSize="@dimen/sp_m"
            android:gravity="center"
            android:background="@drawable/rounded_around"
            android:textColor="@color/white"
            android:text="1"/>
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="_testView"
        android:id="@+id/testView"
        android:textSize="@dimen/sp_m"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/webView"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <!--<android.support.design.widget.CoordinatorLayout-->
        <!--android:id="@+id/main_content"-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

    <!--<ListView-->
        <!--android:id="@+id/lvToDoList"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"></ListView>-->

    <android.support.design.widget.FloatingActionButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@mipmap/ic_movie_menu"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="23dp"
        android:id="@+id/floatingActionButton"
        android:visibility="invisible"
        android:tint="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:backgroundTint="?attr/colorPrimary" />
    <!--</android.support.design.widget.CoordinatorLayout>-->

</RelativeLayout>
